themes/mm/sass/app.scss
//------------------------------
// Imports
//------------------------------

@import "fonts";
@import "variables";
@import "bootstrap4/bootstrap-flex";

//------------------------------
// Global Theme
//------------------------------

html {
  @include media-breakpoint-down(xs) {
    font-size: round($font-size-root / 1.12);
  }
}

.nav {
  display: flex;
  flex-wrap: wrap;
  padding-left: 15px;
  margin-top: $spacer;
  margin-bottom: $spacer * 2.2;
  align-items: baseline;

  > a {
    color: $body-color;
  }
}

.brand {
  margin-right: $spacer;
  font-size: 30px;
  color: $gray-dark;

  @include media-breakpoint-down(xs) {
    width: 100%;
    padding: 0;
    margin: 0 0 .7rem;
    text-align: center;
  }
}

.push-right {
  // Push a flex item to the right
  margin-left: auto !important;
}

.nav-link {
  @include hover-focus {
    text-decoration: $link-hover-decoration;
  }
}

h1, h2, h3, h4, h5, h6,
.h1, .h2, .h3, .h4, .h5, .h6 {
  margin-top: $spacer * 1.5;

  > a {
    color: $body-color;
  }

  + blockquote {
    // Extra whitespace for quotes directly after headings
    margin-top: $spacer;
  }

  @include media-breakpoint-down(md) {
    line-height: 1.4;
  }

  @include media-breakpoint-down(xs) {
    line-height: 1.1;
  }
}

h1 {
  text-align: center;

  @include media-breakpoint-down(xs) {
    margin-top: 0;
    font-size: 2rem;
  }

  @include media-breakpoint-up(lg) {
    // More whitespace on large screens
    margin: .9rem 0 2.3rem;
  }
}

h2 {
  margin-top: $spacer * 1.9;

  @include media-breakpoint-down(xs) {
    font-size: 1.85rem;
  }
}

li {
  // Add more space between list items
  margin-bottom: $spacer / 2;
}

// Larger clickable area
// README: Reduce size if you experience problems with overlapping links
// ↳ For debugging enable CSS Outlining at http://localhost:3001/remote-debug
a {
  padding: .6em 1em;
  margin: -.6em -1em;
  word-wrap: break-word;
}

.btn {
  margin: 0;
}

blockquote {
  @extend .blockquote;
  border-left-color: $gray-light;

  > p:last-of-type {
    @extend .mb-0;
  }
}

.blockquote-plain {
  padding: $spacer;
  margin-bottom: $spacer * 2;
  border-left: 0;

  > .blockquote-footer {
    margin-top: $spacer * .2;
    color: $white;
  }
}

table {
  @extend .table;
}

th,
td {
  @include media-breakpoint-down(xs) {
    padding: $table-sm-cell-padding;
  }
}

kbd {
  white-space: nowrap;
}

.footer {
  margin: 2rem 0 3rem;
  color: $gray-light;
  text-align: center;

  > a {
    color: inherit;
  }
}

.lead,
blockquote {
  @include media-breakpoint-down(xs) {
    font-size: 1rem;
  }
}

//------------------------------
// Category listing
//------------------------------

.category-year {
  margin-top: $spacer * 1.6;
  margin-bottom: $spacer * 1.6;
  color: $gray;
  text-align: center;
}

.category-item {
  margin-bottom: $spacer * 1.2;
}

.readtime {
  margin-left: 1rem;
  color: $gray-light;
}

//------------------------------
// Blog posts
//------------------------------

.page,
.post {
  margin-right: auto;
  margin-left: auto;
}

.picture {
  display: inline-block;
  margin-bottom: $spacer;
}

figure {
  @extend .figure;
}

.figure-img {
  margin-bottom: $spacer / 2;
}

figcaption {
  @extend .figure-caption;
  color: $gray;
}

.meta {
  margin-top: $spacer * 1.3;
}

.img-author {
  margin-bottom: $spacer / 2;
}

.time {
  color: $gray;
}

.lead.bg-primary {
  padding: $spacer;
}

.footnote-ref {
  margin-left: .2rem;
}

//------------------------------
// Homepage
//------------------------------

.home-intro {
  text-align: center;
}

.subscribe {
  padding: ($spacer-y * 2.1) 0 ($spacer-y * 2.4);
  margin-top: $spacer * 3;
  margin-bottom: $spacer;
  text-align: center;
  background-color: $brand-primary;

  .lead {
    font-weight: normal; // Prevent loading extra font on homepage
  }
}

.email {
  border-color: $btn-secondary-border;
}

.summary-h2 {
  border-bottom: 1px solid $gray-light;
}

.article-summary > p:last-of-type::after {
  content: "…";
}

.more {
  margin-top: $spacer;
}

.all-posts {
  padding-top: $spacer;
  margin-top: $spacer;
  border-top: 1px solid $gray-light;
}

